<resources>
    <string name="app_name">Tip time</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="tip_amt_0">Tip amount : 0</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
</resources>